# wrapt_timeout_decorator

./: .bettercodehub.yml  .coveragerc  .flake8  .gitignore  .rotekignore  .travis.yml  .travis.yml.pypy.real  CHANGES.rst  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  __init__.py  before_install_jython.sh  build_docs.py  conftest.py  install_lib_bash.sh  install_lib_bash_wine.sh  install_wine.sh  install_wine_chocolatey_non_functional.sh  install_wine_git_portable.sh  install_wine_machine.sh  install_wine_powershell_core.sh  install_wine_python2_preinstalled.sh  install_wine_python3_preinstalled.sh  jupyter_test_wrapt_timeout_decorator.ipynb  mypy.ini  project_conf.py  project_update.py  pyproject.toml  pytest.ini  requirements.txt  requirements_pytest.txt  requirements_test.txt  setup.cfg  setup.py  (+2 more)
.3rd_party_stubs/: readme.txt
.docs/: README_template.rst  README_template_backup.rst  acknowledgment.rst  badges.rst  badges_project.rst  badges_with_jupyter.rst  badges_without_jupyter.rst  caveats_using_no_signals.rst  commandline_help.rst  commandline_help.txt  contribute.rst  description.rst  detect_pickle_errors.rst  hard_timeout.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  licence_mit.rst  logging.rst  multithreading.rst  parameters.rst  tested_under.rst  try_in_jupyter.rst  usage.rst  use_eval.rst
.docs/parts/: 01_basic_usage.rst  02_general_recommendations.rst  03_use_with_windows.rst  04_considerations_using_signals.rst  05_considerations_using_subprocesses.rst  06_nested_timeouts.rst  07_custom_timeout_exception.rst  08_parameters.rst  09_override_parameters.rst  10_multithreading.rst  11_subprocess_monitoring.rst  12_use_as_function.rst  (+19 more)
docs/: README_template.rst  acknowledgment.rst  alternative_exception.rst  badges_with_jupyter.rst  caveats_using_signals.rst  installation.rst  nested_timeouts.rst  override_parameters.rst  parameters.rst  tested_under.rst  try_in_jupyter.rst  use_as_function.rst  use_eval.rst  use_with_windows.rst
lib_bash/: lib_color.sh  lib_helpers.sh  lib_retry.sh  lib_wine_install.sh
tests/: lib_bash_functions.sh  lib_test_helper.py  run_clean.sh  run_testloop.sh  run_testloop_windows.cmd  test_cli.py  test_subprocess_alive_polling.py  test_wrapt_timeout_decorator  test_wrapt_timeout_decorator.py  wrapt_timeout_test_helper.py
timeout_decorator/: timeout_decorator.py
travis_secrets/: create_secrets.sh  create_secrets_bash_helpers.sh  shellcheck.sh
wrapt_timeout_decorator/: __doc__.py  __init__.py  __init__conf__.py  build_docs.py  run_pytest3_mypy_in_a_loop.sh  shellcheck.sh  wrap_function_multiprocess.py  wrap_helper.py  wrapt_timeout_decorator.py  wrapt_timeout_decorator_cli.py
(+14 files in other folders)
